--- a/index.html
+++ b/index.html
@@ -17,12 +17,31 @@
   />
 </head>
 <body>
+	<a href="https://github.com/seireiden" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#64CEAA; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
   <div id="app">We are building somthing special for you ...</div>
   <script>
     window.$docsify = {
       search: 'auto',
-      coverpage: true,
-      name: 'your_project_theme',
+      name: 'seireiden',
+			siteFont : "PT Sans",
+			defaultTheme : 'dark',
+			codeFontFamily : 'Roboto Mono, Monaco, courier, monospace',
+			bodyFontSize : '17px',
+			coverpage: true,
+			onlyCover: true,
+			auto2top: true,
+			autoHeader: false,
+			subMaxLevel: 3,
+			maxLevel: 4,
+			loadNavbar: true,
+			executeScript: true,
+			tabs: {
+				persist    : true,      // default
+				sync       : false,      // default
+				theme      : 'classic', // default
+				tabComments: true,      // default
+				tabHeadings: true
+			},      // default
       search: {
         noData: {
           '/': 'No results!'
@@ -32,26 +51,93 @@
           '/': 'Search'
         }
       },
-      plugins: [
-        function(hook) {
-          var footer = [
-            '<footer style="text-align: center;margin-top: 50px;">',
-            '<span> Your Project  &copy; 2020 </span>',
-            '</footer>'
-          ].join('');
+			plugins: [
+				function(hook) {
+					var footer = [
+						'<footer style="text-align: center;margin-top: 50px;">',
+						'<span> Made with <svg xmlns="http://www.w3.org/2000/svg" width="24" height="15" viewBox="0 0 24 24" fill="red" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg> by <a href="https://www.twitter.com/intent/user?screen_name=vimoveremacs" target="_blank">@vimoveremacs</a>  &copy; 2021 </span>',
+						'</footer>'
+					].join('');
 
-          hook.afterEach(function(html) {
-            return html + footer;
-          });
-        }
+					hook.afterEach(function(html) {
+						return html + footer;
+					});
+				}
+			],
+			darklightTheme: {
+				// siteFont : 'PT Sans | Source Sans Pro',
+				// defaultTheme : 'light | dark',
+				// codeFontFamily : 'Roboto Mono, Monaco, courier, monospace',
+				dark: {
+					// accent: '#42b983',
+					// toogleBackground : '#ffffff',
+					// background: '#091a28',
+					textColor: '#98b1a7',
+					// codeTextColor : '#ffffff',
+					// codeBackgroudColor : '#0e2233',
+					// borderColor : '#0d2538',
+					// blockQuoteColour : '#858585',
+					// highlightColor : '#d22778',
+					// sidebarSublink : '#b4b4b4',
+					// codeTypeColor : '#ffffff',
+					coverBackground : '#091a28'
+					// toogleImage : 'url(https://cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/icons/sun.svg)'
+
+				},
+				light: {
+					accent: '#09c372',
+					// toogleBackground : '#091a28',
+					// background: '#ffffff',
+					textColor: '#8b96a0',
+					// codeTextColor : '#525252',
+					// codeBackgroudColor : '#f8f8f8',
+					// borderColor : 'rgba(0, 0, 0, 0.07)',
+					// blockQuoteColor : '#858585',
+					// highlightColor : '#d22778',
+					// sidebarSublink : '#b4b4b4',
+					// codeTypeColor : '#091a28',
+					coverBackground : '#091a28'
+					// toogleImage : 'url(https://cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/icons/moon.svg)'
+				}
+			},
+      plugins: [
+				function(hook) {
+					var footer = [
+						'<hr/>',
+						'<footer>',
+						'<span><a href="https://twitter.com/intent/user?screen_name=vimoveremacs>Parth Krishna</a> &copy;2021 - present.</span>',
+						'</footer>'
+					].join('');
+
+					hook.afterEach(function(html) {
+						return html + footer;
+					});
+				},
+
+				function(hook, vm) {
+					hook.beforeEach(function(html) {
+						var url =
+							'https://github.com/seireiden/docs/tree/master/' +
+							vm.route.file;
+						var editHtml = '[📝 Edit this Page](' + url + ')\n';
+
+						return (
+							editHtml +
+							html +
+							'\n----\n' +
+							'Last modified {docsify-updated} ' +
+							editHtml
+						);
+					});
+				}
       ],
     }
   </script>
+	<script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+	<!-- docsify-tabs (latest v1.x.x) -->
+	<script src="//cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
-  <script 
-    src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js"
-    type="text/javascript">
-  </script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js" type="text/javascript"></script>
 </body>
 </html>
