Updated README. Added logos.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <script>
     window.$docsify = {
       search: 'auto',
-      name: 'seireiden',
+      // name: 'seireiden',
 			siteFont : "PT Sans",
 			defaultTheme : 'dark',
 			codeFontFamily : 'Roboto Mono, Monaco, courier, monospace',
@@ -66,7 +66,7 @@
 			],
 			darklightTheme: {
 				// siteFont : 'PT Sans | Source Sans Pro',
-				// defaultTheme : 'light | dark',
+				defaultTheme : 'dark',
 				// codeFontFamily : 'Roboto Mono, Monaco, courier, monospace',
 				dark: {
 					// accent: '#42b983',
