--- a/index.html
+++ b/index.html
@@ -22,26 +22,26 @@
   <script>
     window.$docsify = {
       search: 'auto',
-      // name: 'seireiden',
+      name: 'seireiden',
 			siteFont : "PT Sans",
 			defaultTheme : 'dark',
 			codeFontFamily : 'Roboto Mono, Monaco, courier, monospace',
 			bodyFontSize : '17px',
 			coverpage: true,
 			onlyCover: true,
-			auto2top: true,
-			autoHeader: false,
-			subMaxLevel: 3,
-			maxLevel: 4,
+			// auto2top: true,
+			// autoHeader: false,
+			// subMaxLevel: 3,
+			// maxLevel: 4,
 			loadNavbar: true,
-			executeScript: true,
-			tabs: {
-				persist    : true,      // default
-				sync       : false,      // default
-				theme      : 'classic', // default
-				tabComments: true,      // default
-				tabHeadings: true
-			},      // default
+			// executeScript: true,
+			// tabs: {
+				// persist    : true,      // default
+				// sync       : false,      // default
+				// theme      : 'classic', // default
+				// tabComments: true,      // default
+				// tabHeadings: true
+			// },      // default
       search: {
         noData: {
           '/': 'No results!'
@@ -65,11 +65,11 @@
 				}
 			],
 			darklightTheme: {
-				// siteFont : 'PT Sans | Source Sans Pro',
+				// siteFont : 'PT Sans',
 				defaultTheme : 'dark',
 				// codeFontFamily : 'Roboto Mono, Monaco, courier, monospace',
 				dark: {
-					// accent: '#42b983',
+					accent: '#42b983',
 					// toogleBackground : '#ffffff',
 					// background: '#091a28',
 					textColor: '#98b1a7',
@@ -133,9 +133,6 @@
       ],
     }
   </script>
-	<script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
-	<!-- docsify-tabs (latest v1.x.x) -->
-	<script src="//cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js" type="text/javascript"></script>
