--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			// subMaxLevel: 3,
 			// maxLevel: 4,
 			loadNavbar: true,
-			// executeScript: true,
+			executeScript: true,
 			// tabs: {
 				// persist    : true,      // default
 				// sync       : false,      // default
@@ -66,7 +66,7 @@
 			],
 			darklightTheme: {
 				// siteFont : 'PT Sans',
-				defaultTheme : 'dark',
+				// defaultTheme : 'dark',
 				// codeFontFamily : 'Roboto Mono, Monaco, courier, monospace',
 				dark: {
 					accent: '#42b983',
