--- a/index.html
+++ b/index.html
@@ -51,19 +51,6 @@
           '/': 'Search'
         }
       },
-			plugins: [
-				function(hook) {
-					var footer = [
-						'<footer style="text-align: center;margin-top: 50px;">',
-						'<span> Made with <svg xmlns="http://www.w3.org/2000/svg" width="24" height="15" viewBox="0 0 24 24" fill="red" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg> by <a href="https://www.twitter.com/intent/user?screen_name=vimoveremacs" target="_blank">@vimoveremacs</a>  &copy; 2021 </span>',
-						'</footer>'
-					].join('');
-
-					hook.afterEach(function(html) {
-						return html + footer;
-					});
-				}
-			],
 			darklightTheme: {
 				// siteFont : 'PT Sans',
 				// defaultTheme : 'dark',
@@ -101,23 +88,11 @@
 				}
 			},
       plugins: [
-				function(hook) {
-					var footer = [
-						'<hr/>',
-						'<footer>',
-						'<span><a href="https://twitter.com/intent/user?screen_name=vimoveremacs>Parth Krishna</a> &copy;2021 - present.</span>',
-						'</footer>'
-					].join('');
-
-					hook.afterEach(function(html) {
-						return html + footer;
-					});
-				},
 
 				function(hook, vm) {
 					hook.beforeEach(function(html) {
 						var url =
-							'https://github.com/seireiden/docs/tree/master/' +
+							'https://github.com/seireiden/seireiden.github.io/tree/master/' +
 							vm.route.file;
 						var editHtml = '[📝 Edit this Page](' + url + ')\n';
 
@@ -128,6 +103,18 @@
 							'Last modified {docsify-updated} ' +
 							editHtml
 						);
+					});
+				},
+				function(hook) {
+					var footer = [
+						'<hr/>',
+						'<footer>',
+						'<span><a href="https://twitter.com/intent/user?screen_name=vimoveremacs>Parth Krishna</a> &copy;2021 - present.</span>',
+						'</footer>'
+					].join('');
+
+					hook.afterEach(function(html) {
+						return (html + footer);
 					});
 				}
       ],
