Somehow, made footer work. Still having redundancy issue

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
       search: 'auto',
       name: 'Seireiden',
 			siteFont : "PT Sans",
-			defaultTheme : 'dark',
+			// defaultTheme : 'dark',
 			codeFontFamily : 'Roboto Mono, Monaco, courier, monospace',
 			bodyFontSize : '17px',
 			coverpage: true,
+			sidebar: true,
 			onlyCover: true,
 			// auto2top: true,
 			// autoHeader: false,
@@ -108,6 +109,7 @@
 				function(hook) {
 					var footer = [
 						'<hr/>',
+						'<span><a href="https://twitter.com/intent/user?screen_name=vimoveremacs>Parth Krishna</a> &copy;2021 - present.</span>',
 						'<footer>',
 						'<span><a href="https://twitter.com/intent/user?screen_name=vimoveremacs>Parth Krishna</a> &copy;2021 - present.</span>',
 						'</footer>'
