A fucking " messed up my code

--- a/index.html
+++ b/index.html
@@ -109,9 +109,8 @@
 				function(hook) {
 					var footer = [
 						'<hr/>',
-						'<span><a href="https://twitter.com/intent/user?screen_name=vimoveremacs>Parth Krishna</a> &copy;2021 - present.</span>',
 						'<footer>',
-						'<span><a href="https://twitter.com/intent/user?screen_name=vimoveremacs>Parth Krishna</a> &copy;2021 - present.</span>',
+						'<span><a href="https://twitter.com/intent/user?screen_name=vimoveremacs">Parth Krishna</a> &copy;2021 - present.</span>',
 						'</footer>'
 					].join('');
 
